--- a/javascript/js-cheatsheet.ipynb
+++ b/javascript/js-cheatsheet.ipynb
@@ -12,11 +12,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [1.](#1)  \n",
+    "- [1. Operators: `Arithmetic`](#1)  \n",
     "- [2.](#2)   \n",
     "- [3.](#3)\n",
     "- [4.](#4)\n",
     "- [5.](#5)\n",
+    "<hr>\n",
     "- [6.](#6)\n",
     "- [7.](#7)\n",
     "- [8.](#8)\n",
@@ -128,7 +129,7 @@
    "metadata": {},
    "source": [
     "<a id=\"1\"></a>\n",
-    "# 1. Title\n",
+    "# 1. Operators\n",
     "([go to top](#top))"
    ]
   },
@@ -1838,21 +1839,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.19.0"
   }
  },
  "nbformat": 4,
