updated js chectsheet

--- a/javascript/javascript-cheatsheet.ipynb
+++ b/javascript/javascript-cheatsheet.ipynb
@@ -1627,7 +1627,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba47fbf",
+   "id": "583383cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5396fd8",
+   "metadata": {},
+   "source": [
+    "_______________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2ea09ac",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "document.getElementById('myImage');\n",
+    "\n",
+    "const elem = document.getElementById('logo');\n",
+    "elem.style.color = 'yellow';\n",
+    "\n",
+    "document.body.innerHTML = 'The cat loves the dog.';\n",
+    "document.body.innerHTML = '<h2>This is a heading</h2>'; \n",
+    "\n",
+    "document.querySelector('h1').innerHTML = 'Most popular Harry Potter characters';\n",
+    "document.getElementById('fourth').innerHTML = 'Professor Snape';\n",
+    "document.getElementsByClassName('slytherin')[0].innerHTML = 'Salazar Slytherin';\n",
+    "document.getElementsByTagName('li')[0].innerHTML = 'Dobby';\n",
+    "\n",
+    "let blueElement = document.querySelector('.blue');\n",
+    "blueElement.style.backgroundColor = 'blue';\n",
+    "\n",
+    "document.querySelector('.blue').style.fontFamily = 'Roboto';\n",
+    "\n",
+    "let parentElement = document.getElementById('must-have').parentNode; // returns <ul> element\n",
+    "let childElements = document.getElementById('groceries').children; // returns an array of <li> elements\n",
+    "\n",
+    "// let first = document.body.children\n",
+    "let first = document.querySelector('body').children\n",
+    "first[0].innerHTML = 'BROWN BEARS ARE AWESOME!'\n",
+    "first[0].parentNode.style.backgroundColor = 'beige'\n",
+    "\n",
+    "let paragraph = document.createElement('p');\n",
+    "paragraph.id = 'info'; \n",
+    "paragraph.innerHTML = 'The text inside the paragraph';\n",
+    "document.body.appendChild(paragraph);\n",
+    "\n",
+    "let paragraph = document.querySelector('p');\n",
+    "document.body.removeChild(paragraph);\n",
+    "document.getElementById('sign').hidden = true;\n",
+    "\n",
+    "let element = document.querySelector('button');\n",
+    "element.onclick = function() { \n",
+    "  element.style.backgroundColor = 'blue' \n",
+    "};\n",
+    "\n",
+    "let element = document.querySelector('button');\n",
+    "function turnBlue() {\n",
+    "   element.style.backgroundColor = 'blue';\n",
+    "}\n",
+    "element.onclick = turnBlue;\n",
+    "\n",
+    "\n",
+    "let element = document.querySelector('button');\n",
+    "function turnButtonRed(){\n",
+    "  // Add code to turn button red\n",
+    "  element.style.backgroundColor = 'red';\n",
+    "  element.style.color = 'white';\n",
+    "  element.innerHTML = 'Red Button';\n",
+    "}\n",
+    "// element.addEventlistener('click', turnButtonRed)\n",
+    "element.onclick = turnButtonRed\n",
+    "\n",
+    "\n",
+    "let eventTarget = document.getElementById('targetElement');\n",
+    "eventTarget.addEventListener('click', function() {\n",
+    "  // this block of code will run when click event happens on eventTarget element\n",
+    "});\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01a596f",
    "metadata": {},
    "outputs": [],
    "source": []
