--- a/javascript/javascript-cheatsheet.ipynb
+++ b/javascript/javascript-cheatsheet.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "5c5d0a9f",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "bf67c85d",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "-2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "b1b3a98d",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "9"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "73777bed",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "0.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "5df34658",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "6d8174a2",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "f901cfd7",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "0dc9fb8f",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "6"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "49b4cb77",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "9"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "7e1e2b40",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "4"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "c7e957db",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "8"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "1c5ad3d4",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "32"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "id": "420d17e3",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "714f1dba",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "228fe329",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "67f5379d",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "2f0d66d2",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        "true"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "9a99e05b",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "false"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "31415317",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "false"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "69819049",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        "true"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "41736634",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "false"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "8a0bb2ed",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
        "true"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "bd21462f",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
        "true"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "5eace75f",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "true"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "c7114ba9",
    "metadata": {
     "scrolled": true
@@ -698,7 +698,7 @@
        "false"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "id": "47920b04",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 27,
    "id": "b9f94439",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "id": "d552e774",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "2d56f54e",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "6b15046c",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "id": "5d9bcefc",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "id": "e935c7b2",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "id": "fb78fe84",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "id": "fba2297c",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "id": "ef0edac1",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
    "id": "7178b7eb",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 37,
    "id": "163c18c1",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "id": "c538923b",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "id": "17f96d92",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "id": "d8be445e",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "id": "d53786d7",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "id": "79da9499",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "id": "40d78ad1",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 44,
    "id": "6040469f",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 45,
    "id": "fee5b100",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 46,
    "id": "d9662f05",
    "metadata": {
     "scrolled": true
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 47,
    "id": "09eb3749",
    "metadata": {
     "scrolled": true
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 48,
    "id": "68f54440",
    "metadata": {
     "scrolled": true
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 49,
    "id": "c81c52c6",
    "metadata": {
     "scrolled": true
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 50,
    "id": "44cac518",
    "metadata": {
     "scrolled": true
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 51,
    "id": "52ecc2a7",
    "metadata": {
     "scrolled": false
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 52,
    "id": "2174c6fc",
    "metadata": {
     "scrolled": true
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 53,
    "id": "411e73e6",
    "metadata": {
     "scrolled": false
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 54,
    "id": "4ba5904e",
    "metadata": {
     "scrolled": false
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 55,
    "id": "a6aee965",
    "metadata": {
     "scrolled": false
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 56,
    "id": "99306ba9",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1410,7 @@
        "true"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 57,
    "id": "d67a3704",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1449,7 @@
        "2"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 58,
    "id": "2c6bedc3",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "3"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 59,
    "id": "d305c026",
    "metadata": {
     "scrolled": true
@@ -1490,10 +1490,10 @@
     {
      "data": {
       "text/plain": [
-       "0.18196534675971643"
+       "0.38599953337205206"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 60,
    "id": "9ac8a92d",
    "metadata": {
     "scrolled": true
@@ -1513,10 +1513,10 @@
     {
      "data": {
       "text/plain": [
-       "0.1931098495093786"
+       "0.03958924790026419"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 61,
    "id": "f30dcec3",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1537,7 @@
        "2"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 62,
    "id": "2b245c08",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1558,7 @@
        "4"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 63,
    "id": "7c08898e",
    "metadata": {},
    "outputs": [
@@ -1579,7 +1579,7 @@
        "16"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 64,
    "id": "e143c2fc",
    "metadata": {},
    "outputs": [
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 65,
    "id": "b74da640",
    "metadata": {},
    "outputs": [
@@ -1712,9 +1712,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e9060a2",
+   "metadata": {},
+   "source": [
+    "# Average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2e265054",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [1,2,3,4,5,6,7,8,9]\n",
+    "let sum = arr.reduce( (a, b) => a + b, 0)\n",
+    "let average = sum / arr.length\n",
+    "console.log(average)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01a596f",
+   "id": "ebaac7a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86f169ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1730,7 +1767,7 @@
    "file_extension": ".js",
    "mimetype": "application/javascript",
    "name": "javascript",
-   "version": "10.19.0"
+   "version": "18.2.0"
   }
  },
  "nbformat": 4,
