updated py cheatsheet

--- a/python/Unsorted.ipynb
+++ b/python/Unsorted.ipynb
@@ -1568,18 +1568,162 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "_____"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def isPalindrome(self, x: int) -> bool:\n",
+    "        input = str(x)\n",
+    "        isPalindrome = True\n",
+    "\n",
+    "        for i in range(0, len(input)):\n",
+    "            if input[i] != input[-(i+1)]:\n",
+    "                isPalindrome = False\n",
+    "        return isPalindrome\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isPalindrome(self, x: int) -> bool:\n",
+    "        reverse = str(x)[::-1]    \n",
+    "        print(reverse)\n",
+    "        return False if x < 0 else x == int(reverse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 121\n",
+    "\n",
+    "sol1 = Solution()\n",
+    "sol1.isPalindrome(x)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 1235367\n",
+    "\n",
+    "sol1 = Solution()\n",
+    "sol1.isPalindrome(x)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 1234321\n",
+    "\n",
+    "sol1 = Solution()\n",
+    "sol1.isPalindrome(x)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 1232425251\n",
+    "\n",
+    "sol1 = Solution()\n",
+    "sol1.isPalindrome(x)        "
+   ]
   },
   {
    "cell_type": "code",
