--- a/python/python-cheatsheet.ipynb
+++ b/python/python-cheatsheet.ipynb
@@ -90,6 +90,7 @@
     "- [53. dict: `indexing`](#53)\n",
     "- [54. dict: `update / replace`](#54)\n",
     "- [55. dict: `nested dicts`](#55)\n",
+    "- [55b. dict: `looping through dictinaries`](#55b)\n",
     "\n",
     "<hr>\n",
     "\n",
@@ -139,6 +140,7 @@
     "- [80. loops: `iter()`](#80)\n",
     "- [81. loops: `while loop`](#81)\n",
     "- [44d. loops:  `nested for loop list comprehensions`](#44d)\n",
+    "- [55b. loops: `looping through dictinaries`](#55b)\n",
     "<hr>\n",
     "\n",
     "- [82. Recursion](#82)\n",
@@ -1020,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1029,13 +1031,56 @@
        "9"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "max([1, 2, 5, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats = {'a': 1, 'b': 3000, 'c': 0}\n",
+    "max(stats.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats = {'a': 1, 'b': 3000, 'c': 0}\n",
+    "for key, value in stats.items():\n",
+    "  # print (key, value)\n",
+    "  # print(max(stats.values()))\n",
+    "  if stats[key] == max(stats.values()):\n",
+    "    print(key)"
    ]
   },
   {
@@ -1869,13 +1914,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "This is \n",
       "MY string!\n",
       "This is MY string!\n",
@@ -1885,6 +1931,7 @@
    ],
    "source": [
     "my_string = \"This is MY string!\"\n",
+    "print(my_string[:0]) \n",
     "print(my_string[:8])  # All the characters before 'M'\n",
     "print(my_string[8:])  # All the characters starting from 'M'\n",
     "print(my_string[:])  # The whole string\n",
@@ -1893,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7798,6 +7845,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"55b\"></a>\n",
+    "# 55b. dict: `looping through dictinaries`\n",
+    "([go to top](#top))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "europe =  {'spain': {'capital': 'madrid', 'population': 47.66 },\n",
+    "           'germany': {'capital': 'berlin', 'population': 23.66 },\n",
+    "           'nigeria': {'capital': 'lagos', 'population': 34.66 },\n",
+    "           'usa': {'capital': 'washington', 'population': 97.66 }}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spain:  {'capital': 'madrid', 'population': 47.66}\n",
+      "<class 'dict'>\n",
+      "germany:  {'capital': 'berlin', 'population': 23.66}\n",
+      "<class 'dict'>\n",
+      "nigeria:  {'capital': 'lagos', 'population': 34.66}\n",
+      "<class 'dict'>\n",
+      "usa:  {'capital': 'washington', 'population': 97.66}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in europe.items():\n",
+    "  print(key + \": \" , value) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "____"
    ]
   },
@@ -12851,7 +12944,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -12866,6 +12959,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
