updated py c heatsheet

--- a/python/python-cheatsheet.ipynb
+++ b/python/python-cheatsheet.ipynb
@@ -45,6 +45,7 @@
     "- [23. strings: `.join()`](#23)\n",
     "- [24. strings: `lstrip()` & `rstrip()` & `.strip()`](#24)\n",
     "- [24a. strings: `string to list`](#24a)\n",
+    "- [24b. strings: `isalpha()`](#24b)\n",
     "\n",
     "<hr>\n",
     "\n",
@@ -1121,6 +1122,24 @@
    ],
    "source": [
     "min([1, 2, 5, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "strs = [\"ab\", \"a\", \"ab\"]\n",
+    "print(min(strs))"
    ]
   },
   {
@@ -4062,6 +4081,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"24b\"></a>\n",
+    "# 24b. strings: `isalpha()`\n",
+    "\n",
+    "https://www.w3schools.com/python/python_ref_string.asp\n",
+    "\n",
+    "([go to top](#top))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "txt = \"CompanyX\"\n",
+    "\n",
+    "txt.isalpha()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "txt = \"Compa23nyX\"\n",
+    "\n",
+    "txt.isalpha()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "____"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"25\"></a>\n",
     "# 25. input: `* unpacking` \n",
     "([go to top](#top))"
@@ -5446,7 +5535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5456,7 +5545,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['orange', 'banana', 'apple']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = list(set(lst))\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5465,7 +5575,7 @@
        "{'apple', 'banana', 'orange'}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
