updated py sheet

--- a/python/python-cheatsheet.ipynb
+++ b/python/python-cheatsheet.ipynb
@@ -3192,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3203,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3217,6 +3217,25 @@
    ],
    "source": [
     "print(message.replace('s','P'))\n",
+    "print(words.replace('T','S'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "random meage\n",
+      "JUSS SEXS IN UPPER CASE\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(message.replace('s',''))\n",
     "print(words.replace('T','S'))"
    ]
   },
